# P-HELP-HCC

./: .gitignore  ACCEPTANCE_ARTIFACTS.md  AUDIT_PACKET_TEMPLATE.md  Dockerfile  README.md  README.zh-TW.md  environment.yml  pyproject.toml  requirements-lock.txt  requirements.txt
audit/: manifest.example.json
configs/: ablations.yaml  default.yaml  discrete_time.yaml  dynamics.yaml  search_grid.yaml
schemas/: audit_manifest.schema.json  locked_external_manifest.schema.json  longitudinal_backtest_columns.json
scripts/: check_acceptance_artifacts.py  create_locked_freeze_manifest.py  reproduce.ps1  reproduce.py  run_dynamics_backtest.py  run_locked_external_validation.py  run_observational_analysis.py  run_smoke.ps1  run_statistical_analysis.py
src/p_help_hcc/: __init__.py  clustering.py  config.py  constants.py  counterfactual.py  data.py  ensemble.py  explain.py  losses.py  metrics.py  neural.py  parallel.py  pipeline.py  preprocessing.py  safeguards.py  society.py  splits.py  test.py  train.py  tuning.py  utils.py  validate.py
src/p_hlpl_hcc/: __init__.py  baseline.py  clustering.py  config.py  constants.py  counterfactual.py  cox.py  data.py  discrete_pipeline.py  ensemble.py  explain.py  locked_validation.py  losses.py  metrics.py  neural.py  observational.py  parallel.py  pipeline.py  preprocessing.py  safeguards.py  society.py  splits.py  statistics.py  survival.py  test.py  train.py  tuning.py  validate.py
tests/: test_cox_breslow.py  test_data_and_splits.py  test_locked_external_validation.py  test_observational.py  test_pipeline_smoke.py  test_reviewer_23_wiring.py  test_statistics.py  test_survival_likelihood.py
