[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p-help-hcc"
version = "0.1.0"
description = "P-HELP-HCC reproducible code derived from the paper methods and experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=1.5",
  "scikit-learn>=1.2",
  "torch>=2.0",
  "joblib>=1.2",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
paper = [
  "xgboost>=2.0",
  "shap>=0.44",
  "lifelines>=0.27",
  "openpyxl>=3.1",
  "pyarrow>=14"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
phelp-train = "p_help_hcc.train:main"
phelp-test = "p_help_hcc.test:main"
phelp-validate = "p_help_hcc.validate:main"
phelp-split = "p_help_hcc.splits:main"
