[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p-help-hcc"
version = "0.1.0"
description = "P-HLPL-HCC reproducible code derived from the paper methods and experiments"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Wen-Dong Jiang", email = "wendongjiang@ieee.org"},
  {name = "Tsung-Jung Lin", email = "dab70@tpech.gov.tw"},
  {name = "Chih-Yung Chang", email = "cychang@mail.tku.edu.tw"},
]
dependencies = [
  "numpy>=1.24",
  "pandas>=1.5",
  "scikit-learn>=1.2",
  "torch>=2.0",
  "joblib>=1.2",
  "PyYAML>=6.0",
  "scipy>=1.10"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
paper = [
  "xgboost>=2.0",
  "lifelines>=0.27",
  "openpyxl>=3.1",
  "pyarrow>=14"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
phelp-train = "p_hlpl_hcc.train:main"
phelp-test = "p_hlpl_hcc.test:main"
phelp-validate = "p_hlpl_hcc.validate:main"
phelp-split = "p_hlpl_hcc.splits:main"
